2004-02-17  Guillaume Smet <guillaume-gforge@smet.org>

	* sf_ldap_check_group now returns false when ldap is not used
	(users were not activated when the project was approved)
	* updated french localization
	* corrected several UI bugs
	* removed edit release link from /project/admin/

2004-02-13  Guillaume Smet <guillaume-gforge@smet.org>

	* Improved newest projects box localization and sql query
	* Improved /admin/ localization and UI
	* Improved /admin/ french localization

2004-02-10  Tim Perdue  <tim@perdue.net>

	* re-organize and mild cleanup of FRS - all files
	are in new /frs/ directory. NOTE - the sys_use_files
	switch is changes to sys_use_frs for consistency!

2004-02-09  Tom Copeland <tom@infoether.com>
	* Implemented RFE [ #657 ] Trove Deletion Error
	 Message Unclear - Could Improve

2004-02-09  Guillaume Smet <guillaume-gforge@smet.org>

	* Implemented a new search engine architecture
	* Applied patch [ #616 ]
	* Fixed bug [ #409 ] Scm index.php was not XHTML valid

2004-02-06  Tom Copeland <tom@infoether.com>
	* Implemented RFE [ #672 ] X people are monitoring this package

2004-02-05  Christian Bayle <bayle@debian.org>

	* Adding $sys_use_people to setup and etc/local.d/25features

2004-02-05  Tim Perdue  <tim@perdue.net>

	* Adding $sys_use_people to local.inc to turn off project openings tab

2004-02-04  Guillaume Smet <guillaume-gforge@smet.org>

	* Fixed bug [ #644 ] Wrong language code for chinese in supported_languages

2004-02-04  Tom Copeland <tom@infoether.com>
	* Applied patch [ #575 ] In forum style "flat" viewing a 
	news item generates an error
	* Fixed bug [ #597 ] Viewing aggregate survey result contains some errors
	* Fixed bug [ #622 ] Download nightly cvs tarballs errors incorrectly
	* Fixed bug [ #654 ] Unable to remove processor
	* Fixed bug [ #489 ] HTML isn't getting escaped right in forums

2004-02-03  Tom Copeland <tom@infoether.com>
	* Applied patch [ #662 ] New german localization diff file